--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/****** General ***********/
+/****** Général ******/
 * {
     font-family: 'Raleway', sans-serif;
 }
@@ -11,6 +11,48 @@
 
 .fa-solid {
     color: var(--main-color);
+}
+
+/****** En-tête ******/
+
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-family: Raleway;
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
+
+nav img {
+    height: 19.1px;
+    width: 60px;
+    left: 30px;
+    top: 30px;
+}
+
+nav div a {
+    margin-left: 50px;
+    text-decoration: none;
+    color: #000000;
+}
+
+nav div a:hover {
+    border-top: 2px solid #0065FC;
+    padding-top: 8px;
+    color: #0065FC;
+}
+
+/****** Recherche Hébergements ******/
+
+.titre-hebergement {
+    font-size: 22px;
+}
+
+.titre-hebergement .sous-titre-hebergement {
+    font-weight: normal;
+    font-size: 16px;
 }
 
 body {
@@ -49,7 +91,7 @@ body {
     font-weight: 700;
 }
 
-.neutralStar {
+.neutral-star {
     color: var(--main-bg-color)
 }
 
@@ -115,9 +157,6 @@ body {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
-
-
-
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
