--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 * {
     font-family: 'Raleway', sans-serif;
     box-sizing: border-box;
+    font-size: 1em;
 }
 
 :root {
@@ -11,13 +12,20 @@
     --filter-bg-color: #DEEBFF;
 }
 
-.fa-solid {
-    color: var(--main-color);
+html, body, div, article, section, h1, h2, h3, p, a, ul, li {
+    margin: 0;
+	padding: 0;
+	border: 0;
 }
 
 body {
     display: flex;
     justify-content: center;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
 }
 
 .main-container {
@@ -27,8 +35,7 @@ body {
 }
 
 .section-title {
-    margin: 0px 0px 30px 0px;
-    font-size: 22px;
+    font-size: 1.375em;
 }
 
 a {
@@ -40,45 +47,60 @@ a:visited {
     color: #000000;
 }
 
+.fa-solid {
+    color: var(--main-color);
+}
+
 /****** Header ******/
 
 header {
-    margin-bottom: 50px;
+    width: 100%;
+    height: 79px;
+    margin-bottom: 30px;
 }
 
 header nav ul {
     display: flex;
-    justify-content: space-between;
-    list-style-type: none;
+    gap: 69px;
 }
 
 header nav ul img {
     display: flex;
     height: 19.1px;
     width: 60px;
+    margin-left: -30px;
+    margin-top: 30px;
 }
 
-header nav ul div {
-    display: flex;
-    gap: 68px;
+header nav ul .accommodations-button {
+    margin-left: auto;
 }
 
-header nav ul div a:hover {
+header nav ul .activities-button {
+    margin-right: -7.39px;
+}
+
+header nav ul li~li {
+    margin-top: 16px;
+}
+
+header nav ul li~li a:hover {
     border-top: 2px solid #0065FC;
-    padding-top: 15px;
+    padding-top: 14px;
     color: #0065FC;
 }
 
 /****** Accommodation Search ******/
 
 .accommodation-title {
-    font-size: 22px;
+    font-size: 1.375em;
     margin-bottom: 35px;
+    height: 53px;
 }
 
 .accommodation-title .accommodation-subtitle {
     font-weight: normal;
-    font-size: 16px;
+    font-size: 0.727em;
 }
 
 /****** Search-bar ******/
@@ -94,7 +116,7 @@ header nav ul div a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
+    width: 100%;
     height: 49px;
     background-color: #F2F2F2;
     border: 1px solid #F2F2F2;
@@ -108,6 +130,7 @@ header nav ul div a:hover {
 }
 
 .search-bar .search-text input {
+    width: 195px;
     height: 100%;
     border: 1px solid #F2F2F2;
 }
@@ -117,7 +140,7 @@ header nav ul div a:hover {
     width: 132px;
     height: 100%;
     color: #ffffff;
-    font-size: 18px;
+    font-size: 1.125em;
     font-weight: bold;
     background-color: #0065FC;
     border: 1px solid #0065FC;
@@ -143,11 +166,11 @@ header nav ul div a:hover {
 }
 
 .filter-name {
-    font-size: 17px;
+    font-size: 1.063em;
 }
 
 .filter-title {    
-    font-size: 16px;
+    font-size: 1em;
     color: #000000;
     padding-left: 10px;
 }
@@ -185,7 +208,7 @@ header nav ul div a:hover {
 .info-txt {
     display: flex;
     align-items: center;
-    font-size: 16px;
+    font-size: 1em;
     color: #000000;
     padding-left: 10px;
 }
@@ -201,7 +224,6 @@ header nav ul div a:hover {
 .accommodations-and-populars section {
     background-color: var(--main-bg-color);
     border-radius: 20px;
-    padding: 30px;
     box-sizing: border-box;
 }
 
@@ -212,12 +234,16 @@ header nav ul div a:hover {
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
+.card-subtitle {
+    font-size: 0.875em;
+}
+
 .card img {
     object-fit: cover;
 }
 
 .card-title {
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .euro {
@@ -232,39 +258,71 @@ header nav ul div a:hover {
 
 .accommodations {
     width: 65%;
+    height: 100%;
+    padding: 30px 0px 30px 0px;
 }
 
-.accomodations-cards {
+.accommodations .section-title {
+    margin-left: 30px;
+    margin-bottom: 30px; 
+    height: 26px;
+}
+
+.accommodations .card {
+    width: 28.741%;
+}
+
+.accommodations-cards {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
     gap: 30px;
 }
 
-.accomodations-cards img {
+.accommodations-cards img {
     border-radius: 20px 20px 0px 0px;
-    width: 240.33px;
-    height: 124px;
+    width: 100%;
+    height: 114px;
 }
 
-.accomodations-cards .card-content {
+.accommodations-cards .card-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    padding: 0px 0px 5px 15px;
+    padding: 4px 10px 10px 10px;
+}
+
+.accommodations-cards .card-txt {
+    display: flex;
+    flex-direction: column;
+}
+
+.accommodations-cards .card-subtitle {
+    padding: 8px 0px 8px 0px;
+}
+
+.accommodations-cards .card-rating {
+    margin: 0px;
+    height: 14.25px;
+}
+
+.show-more {
+    display: flex;
+    margin: 30px 0px 0px 30px;
+    height: 21px;
 }
 
 .show-more h2 {
-    margin-top: 10px;
-    font-weight: bold;
-    font-size: 18px;
+    font-size: 1.125em;
 }
 
 /****** Populars ******/
 
 .populars {
     width: 32%;
+    height: 100%;
+    padding: 30px 30px 33.5px 30px;
 }
 
 .populars-cards {
@@ -276,7 +334,7 @@ header nav ul div a:hover {
 .populars-title {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    margin-bottom: 30px;
 }
 
 .populars-title i {
@@ -290,7 +348,7 @@ header nav ul div a:hover {
 
 .populars-cards img {
     width: 33%;
-    height: 136px;
+    height: 134px;
     border-radius: 20px 0px 0px 20px;
 }
 
@@ -304,11 +362,7 @@ header nav ul div a:hover {
 
 .populars-cards .card-title {
     margin-top: 10px;
-    margin-bottom: 4px;
-}
-
-.populars-cards .card-subtitle {
-    margin: 0;
+    margin-bottom: 5px;
 }
 
 .populars-cards .card-rating {
@@ -319,12 +373,14 @@ header nav ul div a:hover {
 
 .activities {
     width: 100%;
-    margin-top: 30px;
-    margin-bottom: 35px;
+    height: 100%;
+    padding-top: 30px;
+    margin-bottom: 65px;
 }
 
 .activities .section-title {
-    margin: 30px 0px 10px 30px;
+    margin: 0px 0px 30px 30px;
+    height: 30.02px;
 }
 
 .activities img {
@@ -340,34 +396,34 @@ header nav ul div a:hover {
     gap: 30px;
 }
 
+.activities-cards .card {
+    background-color: white;
+    padding: 0px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
 .activities .card-content {
-    padding-left: 15px;
+    padding: 16px 20px 20px 19px;
 }
 
 /****** Footer ******/
 
 footer {
+    width: 100%;
     background-color: #F2F2F2;
-}
-
-footer nav ul {
     display: flex;
-    justify-content: space-between;
-    text-decoration: none;
-    padding: 30px;
-    list-style-type:none;
-
 }
 
-footer nav ul div {
+footer ul {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    font-size: 16px;
+    width: 33.33%;
+    padding: 20px 0px 20px 20px;
 }
 
 .footer-titles {
-    font-size: 18px;
+    font-size: 1.125em;
     font-weight: bold;
 }
 
@@ -402,12 +458,18 @@ footer nav ul div {
     }
 
     .populars-cards .card-title {
-        font-size: 14px;
+        font-size: 0.875em;
     }
 
     .populars-cards .card-subtitle {
-        font-size: 13px;
+        font-size: 0.813em;
     }
+
+    .activities-cards {
+        width: 25%;
+    }
+
+    /* 193.5 ; 70*/
 }
 
 /* Small devices (phones, less than 768px) */
